// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exception screen component Renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(5, 5, 13)",
      "flex": 1,
      "justifyContent": "space-around",
      "padding": "5%",
    }
  }
>
  <StatusBar
    animated={false}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "space-around",
        "marginTop": 80,
      }
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "height": 160,
          "width": 160,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(255, 239, 223)",
            "fontFamily": "TT Commons",
            "fontSize": 30,
            "textAlign": "center",
          }
        }
      >
        Uh oh.
      </Text>
      <Text
        numberOfLines={5}
        style={
          Object {
            "color": "rgb(255, 239, 223)",
            "fontFamily": "TT Commons",
            "fontSize": 20,
            "marginTop": 16,
            "textAlign": "center",
          }
        }
      >
        Unknown Error.
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 150,
        "justifyContent": "space-evenly",
        "marginTop": 24,
        "width": "100%",
      }
    }
  >
    <JolocomButton
      onPress={[Function]}
      text="Send error report"
    />
    <JolocomButton
      onPress={[Function]}
      text="Go back"
      transparent={true}
    />
  </View>
</View>
`;

exports[`Exception screen component Renders correctly when no error object is provided 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(5, 5, 13)",
      "flex": 1,
      "justifyContent": "space-around",
      "padding": "5%",
    }
  }
>
  <StatusBar
    animated={false}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "space-around",
        "marginTop": 80,
      }
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "height": 160,
          "width": 160,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(255, 239, 223)",
            "fontFamily": "TT Commons",
            "fontSize": 30,
            "textAlign": "center",
          }
        }
      >
        Uh oh.
      </Text>
      <Text
        numberOfLines={5}
        style={
          Object {
            "color": "rgb(255, 239, 223)",
            "fontFamily": "TT Commons",
            "fontSize": 20,
            "marginTop": 16,
            "textAlign": "center",
          }
        }
      >
        There was an error with your request.
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 150,
        "justifyContent": "space-evenly",
        "marginTop": 24,
        "width": "100%",
      }
    }
  >
    <JolocomButton
      onPress={[Function]}
      text="Go back"
      transparent={true}
    />
  </View>
</View>
`;
